<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_doa_lable"
        android:layout_marginStart="@dimen/_16dp"
        android:textSize="@dimen/_32sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200dp"
            android:layout_margin="@dimen/_16dp"
            android:id="@+id/vpArtikel"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_16dp"
            android:orientation="horizontal"
            android:id="@+id/llSlider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main_menu"
            android:orientation="vertical"
            android:padding="@dimen/_16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_kumpulan_doa_dzikir"
                android:textStyle="bold"
                android:textSize="@dimen/_18sp"
                android:textColor="@color/blue"
                android:id="@+id/tvTitle"/>
            <LinearLayout
                android:id="@+id/llDzikirDoaShalat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_item"
                android:padding="@dimen/_16dp">
                <ImageView
                    android:layout_width="@dimen/_75dp"
                    android:layout_height="@dimen/_75dp"
                    android:contentDescription="@string/txt_imageview"
                    android:src="@drawable/ic_doa"
                    android:id="@+id/ivDoa"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/txt_first_row"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    android:id="@+id/tvFirstRow"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llDzikirSetiapSaat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_item"
                android:padding="@dimen/_16dp">
                <ImageView
                    android:layout_width="@dimen/_75dp"
                    android:layout_height="@dimen/_75dp"
                    android:contentDescription="@string/txt_imageview"
                    android:src="@drawable/ic_time"
                    android:id="@+id/ivDzikirSetiapSaat"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/txt_dzikir_setiap_saat"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    android:id="@+id/tvDzikirSetiapSaat"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llDzikirDoaHarian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_item"
                android:padding="@dimen/_16dp">
                <ImageView
                    android:layout_width="@dimen/_75dp"
                    android:layout_height="@dimen/_75dp"
                    android:contentDescription="@string/txt_imageview"
                    android:src="@drawable/ic_dzikir"
                    android:id="@+id/ivDzikirDoaHarian"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/txt_dzikir_doa_harian"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    android:id="@+id/tvDzikirDoaHarian"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llDzikirPagiPetang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16dp"
                android:orientation="horizontal"
                android:background="@drawable/bg_item"
                android:padding="@dimen/_16dp">
                <ImageView
                    android:layout_width="@dimen/_75dp"
                    android:layout_height="@dimen/_75dp"
                    android:contentDescription="@string/txt_imageview"
                    android:src="@drawable/ic_pagi_petang"
                    android:id="@+id/ivDzikirPagiPetang"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/txt_dzikir_pagi_petang"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="bold"
                    android:id="@+id/tvDzikirPagiPetang"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>